--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -17,6 +17,7 @@ h6{font-size: 1.4rem; letter-spacing: 0; line-height: 1.2}
 .mainContainer {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 
 #login-form {
@@ -40,12 +41,5 @@ h6{font-size: 1.4rem; letter-spacing: 0; line-height: 1.2}
 @media (min-width: 40.0rem) { /* Small devices (landscape phones, 576px and up) */
   header section {
     flex-direction: row;
-  }
-  header nav ul {
-    margin: 1rem;
-  }
-  .phx-logo {
-    flex-basis: 527px;
-    margin: 2rem 1rem;
   }
 }
